--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.6.0",
